--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div#mp3_player > div > audio {
 div#mp3_player > canvas { 
  width:100%; 
  height:auto; 
- background-image:url(image/appinfo.png); 
+ background-image:url(http://oi57.tinypic.com/14o61ky.jpg); 
  background-size:cover;
  background-repeat:no-repeat;
  margin:auto;
